# SequentialMST

./: CMakeLists.txt  MinSpanTree.cpp  MinSpanTree.h  edge.cpp  edge.h  graph.cpp  graph.h  main.cpp  tempset.txt
testsets/: 3980.edges  createsampleset.py  graph  soc-sign-bitcoinalpha1.csv  soc-sign-bitcoinotc1.csv  temp  temp1  temp11  temp12  temp13  temp2  temp21  temp22  temp23  temp3  temp31  temp32  temp33  temp4  temp5  tempset.txt  tempset1.txt  undirreduceddataset.py
